[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlbapi"
version = "1.0.0a1"
description = "A Python 3 wrapper for the MLB StatsAPI at statsapi.mlb.com"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    {name = "Trevor Viljoen", email = "trevor.viljoen@gmail.com"},
]
keywords = [
    "MLB",
    "MLB API",
    "Major League Baseball",
    "baseball",
    "baseball API",
    "baseball data",
    "baseball scores",
    "baseball statistics",
    "baseball stats",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Games/Entertainment",
    "Intended Audience :: Developers",
]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "inflection",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coveralls",
]
examples = [
    "textual>=0.40",
]

[project.urls]
Homepage = "https://github.com/trevor-viljoen/mlbapi"
Source = "https://github.com/trevor-viljoen/mlbapi"
"Bug Tracker" = "https://github.com/trevor-viljoen/mlbapi/issues"
Funding = "https://paypal.me/trevorviljoen"
"GitHub Sponsors" = "https://github.com/sponsors/trevor-viljoen"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlbapi*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
